--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,5 +11,6 @@ dependencies = [
     "numpy",
     "matplotlib",
     "ipykernel",
+    "pandas-stubs~=2.3.3",
 ]
-requires-python = ">=3.8"
+requires-python = ">=3.10"
